@@ -7,7 +7,9 @@ import com.motionmate.dto.chat.ChatRoomMemberDto;
 import com.motionmate.dto.chat.ChatRoomRequestDto;
 import com.motionmate.dto.chat.ChatRoomResponseDto;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 public class ChatRoomMapper {
 
@@ -25,28 +27,13 @@ public class ChatRoomMapper {
         );
     }
 
+    // participants 정보 없이 기본 변환
     public static ChatRoomResponseDto toDto(ChatRoom room) {
-        return ChatRoomResponseDto.builder()
-                .id(room.getId())
-                .title(room.getTitle())
-                .exerciseType(room.getExerciseType())
-                .roadAddress(room.getRoadAddress())
-                .address(room.getAddress())
-                .latitude(room.getLatitude())
-                .longitude(room.getLongitude())
-                .createdAt(room.getCreatedAt())
-                .promiseDate(room.getPromiseDate())
-                .promiseTime(room.getPromiseTime())
-                .promiseAt(room.getPromiseAt())
-                .creatorId(room.getCreator().getId())
-                .creatorNickname(room.getCreator().getProfile().getNickname())
-                .members(List.of())
-                .build();
+        return toDto(room, Collections.emptyList());
     }
 
-
+    // participants 정보가 있을 경우 포함한 변환
     public static ChatRoomResponseDto toDto(ChatRoom room, List<ChatRoomParticipant> participants) {
-
         List<ChatRoomMemberDto> members = participants.stream()
                 .map(ChatRoomParticipantMapper::toDto)
                 .toList();
@@ -63,10 +50,12 @@ public class ChatRoomMapper {
                 .promiseDate(room.getPromiseDate())
                 .promiseTime(room.getPromiseTime())
                 .promiseAt(room.getPromiseAt())
-                .creatorId(room.getCreator().getId())
-                .creatorNickname(room.getCreator().getProfile().getNickname())
+                .creatorId(Optional.ofNullable(room.getCreator()).map(User::getId).orElse(null))
+                .creatorNickname(Optional.ofNullable(room.getCreator())
+                        .map(User::getProfile)
+                        .map(p -> p.getNickname())
+                        .orElse("알 수 없음"))
                 .members(members)
                 .build();
     }
-
 }
